// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label component background not set when length label is null 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component background set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <rect
    fill="red"
    fill-opacity="100%"
    height="10.8"
    stroke="black"
    stroke-width="0"
    width="29.7"
    x="5.4"
    y="-5.1"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </rect>
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    label
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component borderColor has no effect when no label 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component borderColor set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <rect
    fill=""
    fill-opacity="0%"
    height="10.8"
    stroke="red"
    stroke-width="9"
    width="38.7"
    x="5.4"
    y="-5.1"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </rect>
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    label
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component borderWidth has no effect when no label 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component borderWidth set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <rect
    fill=""
    fill-opacity="0%"
    height="10.8"
    stroke="black"
    stroke-width="9"
    width="38.7"
    x="5.4"
    y="-5.1"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </rect>
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    label
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component circular mode set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="rotate(-90)translate(0)"
>
  <!---->
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component color set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="9"
    dy="3"
    fill="red"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component default label renders correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component font-weight set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="bold"
    text-anchor="start"
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component label set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    label
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component size set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="1.5"
    dy="0.5"
    fill="black"
    font-size="1.5px"
    font-weight="normal"
    text-anchor="start"
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component x set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 1)"
>
  <!---->
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component y set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(1 0)"
>
  <!---->
   
  <text
    dx="9"
    dy="3"
    fill="black"
    font-size="9px"
    font-weight="normal"
    text-anchor="start"
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;
